k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      name: unifi-controller
  template:
    metadata:
      name: unifi-controller
      labels:
        name: unifi-controller
    spec:
      volumes:
        - name: unifi
          hostPath:
            path: /opt/data/unifi/controller
            type: Directory
      containers:
        - name: unifi-controller
          image: jacobalberty/unifi:v8.6.9 # {"$imagepolicy": "unifi:unifi"}
          ports:
            - containerPort: 3478
              protocol: UDP
              name: stun
            - containerPort: 8080
              protocol: TCP
              name: http
            - containerPort: 8443
              protocol: TCP
              name: https
            - containerPort: 8843
              protocol: TCP
              name: secure-redirect
            - containerPort: 8880
              protocol: TCP
              name: http-redirect
            - containerPort: 6789
              protocol: TCP
              name: speedtest
          volumeMounts:
            - name: unifi
              mountPath: /unifi
